[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "egui-glutin-gl"
version = "0.19.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7.2"
egui = {version = "0.22.0", features = ["bytemuck"]}
egui-winit = {version = "0.22.0", default-features = false, features = ["clipboard", "links"]}
gl = {git = "https://github.com/996666925/gl"}
glutin = "0.30.9"
log = "0.4.14"
memoffset = "0.6"
puffin = ">=0.12"
winit = "0.28.6"
